--- a/index.html
+++ b/index.html
@@ -10,70 +10,31 @@
         <h1>KNEES Contract Queue</h1>
         <div class="row">
             <div class="span12">
-                <h3>High Priority</h3>
                 <table class="table">
                 <tr>
+                    <td>For</td>
+                    <td>Type</td>
                     <td>From</td>
+                    <td>To</td>
                     <td>Accepted By</td>
                     <td>Volume</td>
                     <td>Date Issued</td>
                     <td>Time Remaining</td>
                 </tr>
-                {% for contract in hpcontracts %}
-                <tr>
-                    <td><p class={{ contract.class }}>{{ contract.issued }}</p></td>
-                    <td><p class={{ contract.class }}>{{ contract.accepted }}</p></td>
-                    <td><p class={{ contract.class }}>{{ contract.volume }}</p></td>
-                    <td><p class={{ contract.class }}>{{ contract.dateissued }}</p></td>
-                    <td><p class={{ contract.class }}>{{ contract.remaining }}</p></td>
+                {% for contract in pending %}
+                <tr class="{{ contract.class }}">
+                    <td>{{ contract.issuer }}</td>
+                    <td>{{ contract.type }}</td>
+                    <td>{{ contract.from }}</td>
+                    <td>{{ contract.to }}</td>
+                    <td>{{ contract.accepted }}</td>
+                    <td style="text-align: right">{{ contract.volume }}</td>
+                    <td>{{ contract.dateissued }}</td>
+                    <td>{{ contract.remaining }}</td>
                 </tr>
                 {% endfor %}
                 </table>
             </div>
-            <div class="span12">
-                <h3>Medium Priority</h3>
-                <table class="table">
-                <tr>
-                    <td>From</td>
-                    <td>Accepted By</td>
-                    <td>Volume</td>
-                    <td>Date Issued</td>
-                    <td>Time Remaining</td>
-                </tr>
-                {% for contract in medpcontracts %}
-                <tr>
-                    <td><p class={{ contract.class }}>{{ contract.issued }}</p></td>
-                    <td><p class={{ contract.class }}>{{ contract.accepted }}</p></td>
-                    <td><p class={{ contract.class }}>{{ contract.volume }}</p></td>
-                    <td><p class={{ contract.class }}>{{ contract.dateissued }}</p></td>
-                    <td><p class={{ contract.class }}>{{ contract.remaining }}</p></td>
-                </tr>
-                {% endfor %}
-                </table>
-            </div>
-            <div class="span12">
-                <h3>Low Priority</h3>
-                <table class="table">
-                <tr>
-                    <td>From</td>
-                    <td>Accepted By</td>
-                    <td>Volume</td>
-                    <td>Date Issued</td>
-                    <td>Time Remaining</td>
-                </tr>
-                {% for contract in lowpcontracts %}
-                <tr>
-                    <td><p class={{ contract.class }}>{{ contract.issued }}</p></td>
-                    <td><p class={{ contract.class }}>{{ contract.accepted }}</p></td>
-                    <td><p class={{ contract.class }}>{{ contract.volume }}</p></td>
-                    <td><p class={{ contract.class }}>{{ contract.dateissued }}</p></td>
-                    <td><p class={{ contract.class }}>{{ contract.remaining }}</p></td>
-                </tr>
-                {% endfor %}
-                </table>
-            </div>
-    
-
     </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script type="text/javascript" src="/js/bootstrap.js"></script>
