Revert "Clean up "accepted by" field"
This reverts commit 38325ccaaed1c8a8b2a5ac6a48b80194010ecf4c.

It seems we've gone back to pilots accepting contracts for themselves.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <td>Type</td>
                     <td>From</td>
                     <td>To</td>
-                    <td>Accepted?</td>
+                    <td>Accepted By</td>
                     <td>Volume</td>
                     <td>Date Issued</td>
                     <td>Time Remaining</td>
