--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <h1>KNEES Contract Queue</h1>
-        <h3><a href="/calc/calc.html">Knees Calculator</a> | <a href="{{ doc_url }}">Docs</a></h3>
+        <h3><a href="{{ calc_curl }}">Knees Calculator</a> | <a href="{{ doc_url }}">Docs</a></h3>
         <div class="row">
             <div class="span12">
                 <table class="table">
